--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
-title: Your awesome title
-author: GitHub User
+title: My first blog site
+author: Hero1
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: A major thinktank site
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
@@ -12,4 +9,4 @@ github_username:  your-github-handle # DO NOT include the @ character, or else t
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-cayman
+theme: minima
